examples/test/testpolicy10572.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10572
  namespace: namespace60
spec:
  podSelector:
    matchLabels:
      key28: value18
      key19: value5
      key33: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value23
      podSelector:
        matchLabels:
          key39: value1
          key14: value11
          key20: value6
